2012-03-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hpijs-pcl5c.xml: Added Xerox Phaser 3160N to the HPIJS
	  PCL 5c driver. This printer also works with this driver.
	  (Ubuntu bug #945294).

2012-03-08 David Williams <dwilliams@ricohsv.com>
      * db/source/printer/Lanier-SP_5200DN.xml,
        db/source/printer/Lanier-SP_5200S.xml,
        db/source/printer/Lanier-SP_5210DN.xml,
        db/source/printer/Lanier-SP_5210SF.xml,
        db/source/printer/Lanier-SP_5210SR.xml,
        db/source/printer/NRG-SP_5200DN.xml,
        db/source/printer/NRG-SP_5200S.xml,
        db/source/printer/NRG-SP_5210DN.xml,
        db/source/printer/NRG-SP_5210SF.xml,
        db/source/printer/NRG-SP_5210SR.xml,
        db/source/printer/Savin-SP_5200DN.xml,
        db/source/printer/Savin-SP_5200S.xml,
        db/source/printer/Savin-SP_5210DN.xml,
        db/source/printer/Savin-SP_5210SF.xml,
        db/source/printer/Savin-SP_5210SR.xml:
        Fixed more driver names in info files.

2012-03-07 David Williams <dwilliams@ricohsv.com>
      * db/source/printer/Gestetner-MP2352_DSm923.xml,
        db/source/printer/Gestetner-MP2852_DSm928.xml,
        db/source/printer/Gestetner-MP3352_DSm933.xml,
        db/source/printer/Infotec-MP_2352.xml,
        db/source/printer/Infotec-MP_2852.xml,
        db/source/printer/Infotec-MP_3352.xml,
        db/source/printer/Lanier-MP_2352.xml,
        db/source/printer/Lanier-MP_2852.xml,
        db/source/printer/Lanier-MP_3352.xml,
        db/source/printer/Lanier-SP_4310N.xml,
        db/source/printer/NRG-MP_2352.xml,
        db/source/printer/NRG-MP_2852.xml,
        db/source/printer/NRG-MP_3352.xml,
        db/source/printer/NRG-SP_4310N.xml,
        db/source/printer/Savin-MP_2352.xml,
        db/source/printer/Savin-MP_2852.xml,
        db/source/printer/Savin-MP_3352.xml,
        db/source/printer/Savin-SP_4310N.xml:
	Fixed driver names in info files.

2012-03-06  Till Kamppeter <till.kamppeter@gmail.com>
