@@ -29,25 +29,20 @@
   <driver>Postscript-Brother</driver>
   <drivers>
     <driver>
-      <id>lj5gray</id>
-    </driver>
-    <driver>
       <id>Postscript</id>
     </driver>
     <driver>
       <id>Postscript-Brother</id>
       <ppd>PPD/Brother/BR5250_2_GPL.ppd</ppd>
     </driver>
-    <driver>
-      <id>pxlmono</id>
-    </driver>
   </drivers>
   <comments>
     <en>
 
-      Throughput = 30
+      Foomatic entry made by PPDtoXML T/G 0.06&lt;p&gt;
 
-      Foomatic entry made by PPDtoXML T/G 0.06
+      Works best in PostScript mode. Do not use PCL-XL drivers ("pxlmono",
+      "lj5gray").
       
       &lt;p&gt;
 
