@@ -1,3 +1,9 @@
+2012-03-23  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Brother-HL-5250DN.xml: Removed relationships with
+	  "pxlmono" and "lj5gray" drivers. These drivers do not perform
+	  well with this printer.
+
 2012-03-22  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/hpijs-pcl5c.xml: Added Xerox Phaser 3160N to the HPIJS
